Agrego product service general

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -14,30 +14,36 @@
     
 
     <main class="main__container">
-       <div class="container__name">
-        <span class="container__title">Mario Bros</span>
+        <div class="container__name">
+            <span class="container__title">Mario Bros</span>
 
-        <a class="card__link" href="/products-mario_bros">
-            <button class="card__link" type="submit">Ver todo</button>
-        </a>
+            <a class="card__link" href="/products-mario_bros">
+                <button class="card__link" type="submit">Ver todo</button>
+            </a>  
+        </div>
+
+        <section data-mario_bros="">
+            <div>
+                
+            </div>        
         
-      </div>
+        </section>
 
-      <section data-mario_bros="">
+
+        <div class="container__name">
+            <span class="container__title">Consolas</span>
+
+            <a class="card__link" href="/products-video_game">
+                <button class="card__link" type="submit">Ver todo</button>
+           </a>
+        </div>
+        
+      <section data-video_game="">
         <div>
-            
-        </div>        
-        
-      </section>
 
-
-      <div class="container__name">
-        <span class="container__title">Consolas</span>
-        <a class="card__link" href="/products-video_game">Ver todo <img src="assets/fonts/arrow_back_black_24dp 1.svg" alt=""></a>
-      </div>
-      <section class="your-class" data-video_game="">
+        </div>
         
-        <div class="card__container">
+        {{!-- <div class="card__container">
             <img class="card__img" src="assets/img/cards/cards-consola/41W5CxtCsgL.webp" alt="">
             <h4>215 USD</h4>
             <p>Nintendo Switch with Neon Blue and Red</p>
@@ -105,7 +111,7 @@
             <h4>45 USD</h4>
             <p>Controlador para interruptor</p>
             <a href="">Ver producto</a>
-        </div>
+        </div> --}}
       </section>
 
       <div class="container__name">
