--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -6,7 +6,7 @@
             <i class="icon-Icone"></i>
         </div>
 
-        {{#if true}}
+        {{#if false}}
             <a href="/login" class="navbar__button">
                 Login
             </a>
