--- a/views/products-video_game.hbs
+++ b/views/products-video_game.hbs
@@ -11,228 +11,13 @@
     <main class="main__container">
         <div class="container__name--products">
             <span class="container__title--products">Todos los productos</span>
-            <button class="products__button">
-                <a class="products__button--link" href="/add-products">Agregar producto</a>
-            </button>
-            
+
+            <a class="products__button--link products__button" href="/add-products">
+                 <button class="products__button" type="submit" data-link="">Agregar producto</button>
+            </a>
         </div>
-        <section class="grid__container">
-            <div>
-                <a href="" class="card__container--position">
-                    <div class="card__container--description">
-                        <img class="card__img" src="assets/img/cards/cards-consola/41W5CxtCsgL.webp" alt="">
-                        <div class="controls__comand">
-                            <span class="controls__delete" >
-                                <i class="icon-eliminar_negro_24dp-1-1"></i>
-                            </span>
-                            <span class="controls__edit" >
-                                <i class="icon-edit_black_24dp-1"></i>
-                            </span>
-                        </div>
-                        <h4>125 USD</h4>
-                        <p>Nintendo Switch with Neon Blue and Neon Red</p>
-                    </div>
-                </a>
-            </div>
-            <div>
-                <a href="" class="card__container--position">
-                    <div class="card__container--description">
-                        <img class="card__img" src="assets/img/cards/cards-consola/51OnenSqevL.jpg" alt="">
-                        <div class="controls__comand">
-                            <span class="controls__delete" >
-                                 <i class="icon-eliminar_negro_24dp-1-1"></i>
-                            </span>
-
-                            <span class="controls__edit" >
-                                <i class="icon-edit_black_24dp-1"></i>
-                            </span>
-                        </div>
-                        <h4>350 USD</h4>
-                        <p>Play Statio PS4 black</p>
-                    </div>
-                </a>
-            </div>
-             <div>
-                <a href="" class="card__container--position">
-                    <div class="card__container--description">
-                        <img class="card__img" src="assets/img/cards/cards-consola/61VeVFjD0hL.jpg" alt="">
-                        <div class="controls__comand">
-                            <span class="controls__delete" >
-                                <i class="icon-eliminar_negro_24dp-1-1"></i>
-                            </span>
-
-                            <span class="controls__edit" >
-                                <i class="icon-edit_black_24dp-1"></i>
-                            </span>
-                        </div>
-                        <h4>160 USD</h4>
-                        <p>Consola de juegos, bateria incorporada</p>
-                    </div>
-                </a>
-            </div>
-             <div>
-                <a href="" class="card__container--position">
-                    <div class="card__container--description">
-                        <img class="card__img" src="assets/img/cards/cards-consola/61pETE6v4vL.jpg" alt="">
-                        <div class="controls__comand">
-                            <span class="controls__delete" >
-                                <i class="icon-eliminar_negro_24dp-1-1"></i>
-                            </span>
-
-                            <span class="controls__edit" >
-                                <i class="icon-edit_black_24dp-1"></i>
-                            </span>
-                        </div>
-                        <h4>150 USD</h4>
-                        <p>Sony play station 2 console black</p>
-                    </div>
-                </a>
-            </div>
-             <div>
-                <a href="" class="card__container--position">
-                    <div class="card__container--description">
-                        <img class="card__img" src="assets/img/cards/cards-consola/61hczff9SjL.jpg" alt="">
-                        <div class="controls__comand">
-                            <span class="controls__delete" >
-                                <i class="icon-eliminar_negro_24dp-1-1"></i>
-                            </span>
-
-                            <span class="controls__edit" >
-                                <i class="icon-edit_black_24dp-1"></i>
-                            </span>
-                        </div>
-                        <h4>187 USD</h4>
-                        <p>RG405M Retro Game Player Android 12</p>
-                    </div>
-                </a>
-            </div>
-             <div>
-                <a href="" class="card__container--position">
-                    <div class="card__container--description">
-                        <img class="card__img" src="assets/img/cards/cards-consola/71unFU3zqpL.jpg" alt="">
-                        <div class="controls__comand">
-                            <span class="controls__delete" >
-                                <i class="icon-eliminar_negro_24dp-1-1"></i>
-                            </span>
-
-                            <span class="controls__edit" >
-                                <i class="icon-edit_black_24dp-1"></i>
-                            </span>
-                        </div>
-                        <h4>30 USD</h4>
-                        <p>Consola de juegos portatil 500 juegos</p>
-                    </div>
-                </a>
-            </div>
-             <div>
-                <a href="" class="card__container--position">
-                    <div class="card__container--description">
-                        <img class="card__img" src="assets/img/cards/cards-consola/61gndBOP9zS.jpg" alt="">
-                        <div class="controls__comand">
-                            <span class="controls__delete" >
-                                <i class="icon-eliminar_negro_24dp-1-1"></i>
-                            </span>
-
-                            <span class="controls__edit" >
-                                <i class="icon-edit_black_24dp-1"></i>
-                            </span>
-                        </div>
-                        <h4>167 USD</h4>
-                        <p>Nintendo Switch Lite - Blue</p>
-                    </div>
-                </a>
-            </div>
-             <div>
-                <a href="" class="card__container--position">
-                    <div class="card__container--description">
-                        <img class="card__img" src="assets/img/cards/cards-consola/61RVryJZMEL.jpg" alt="">
-                        <div class="controls__comand">
-                            <span class="controls__delete" >
-                                <i class="icon-eliminar_negro_24dp-1-1"></i>
-                            </span>
-
-                            <span class="controls__edit" >
-                                <i class="icon-edit_black_24dp-1"></i>
-                            </span>
-                        </div>
-                        <h4>30 USD</h4>
-                        <p>Nintendo eShop Gift Card</p>
-                    </div>
-                </a>
-            </div>
-             <div>
-                <a href="" class="card__container--position">
-                    <div class="card__container--description">
-                        <img class="card__img" src="assets/img/cards/cards-consola/71YNm35y1OL.jpg" alt="">
-                        <div class="controls__comand">
-                            <span class="controls__delete" >
-                                <i class="icon-eliminar_negro_24dp-1-1"></i>
-                            </span>
-
-                            <span class="controls__edit" >
-                                <i class="icon-edit_black_24dp-1"></i>
-                            </span>
-                        </div>
-                        <h4>30 USD</h4>
-                        <p>Controlador inhalambrico para Switch</p>
-                    </div>
-                </a>
-            </div>
-            <div>
-                <a href="" class="card__container--position">
-                    <div class="card__container--description">
-                        <img class="card__img" src="assets/img/cards/cards-consola/71ZKhvqOD4L.jpg" alt="">
-                        <div class="controls__comand">
-                            <span class="controls__delete" >
-                                <i class="icon-eliminar_negro_24dp-1-1"></i>
-                            </span>
-
-                            <span class="controls__edit" >
-                                <i class="icon-edit_black_24dp-1"></i>
-                            </span>
-                        </div>
-                        <h4>45 USD</h4>
-                        <p>Controlador para interruptor</p>
-                    </div>
-                </a>
-            </div>
-                  <div>
-                <a href="" class="card__container--position">
-                    <div class="card__container--description">
-                        <img class="card__img" src="assets/img/cards/cards-consola/71t7ozGihFL.jpg" alt="">
-                        <div class="controls__comand">
-                            <span class="controls__delete" >
-                                <i class="icon-eliminar_negro_24dp-1-1"></i>
-                            </span>
-
-                            <span class="controls__edit" >
-                                <i class="icon-edit_black_24dp-1"></i>
-                            </span>
-                        </div>
-                        <h4>150 USD</h4>
-                        <p>Retro Handheld Games Console 3.5"</p>
-                    </div>
-                </a>
-            </div>
-            </div>
-                  <div>
-                <a href="" class="card__container--position">
-                    <div class="card__container--description">
-                        <img class="card__img" src="assets/img/cards/cards-consola/51pa05MLMrL.jpg" alt="">
-                        <div class="controls__comand">
-                            <span class="controls__delete" >
-                                <i class="icon-eliminar_negro_24dp-1-1"></i>
-                            </span>
-
-                            <span class="controls__edit" >
-                                <i class="icon-edit_black_24dp-1"></i>
-                            </span>
-                        </div>
-                        <h4>45 USD</h4>
-                        <p>Consola de juegos portátil 5.1"</p>
-                    </div>
-                </a>
-            </div>
+        <section class="grid__container" data-nintendo="">
+        
 
         </section>
 
