--- a/views/products-board_game.hbs
+++ b/views/products-board_game.hbs
@@ -16,222 +16,8 @@
             </button>
             
         </div>
-        <section class="grid__container">
-            <div>
-                <a href="" class="card__container--position">
-                    <div class="card__container--description">
-                        <img class="card__img" src="assets/img/cards/cards-juegos/81l3EHcpx.jpg" alt="">
-                        <div class="controls__comand">
-                            <span class="controls__delete" >
-                                <i class="icon-eliminar_negro_24dp-1-1"></i>
-                            </span>
-                            <span class="controls__edit" >
-                                <i class="icon-edit_black_24dp-1"></i>
-                            </span>
-                        </div>
-                        <h4>15 USD</h4>
-                        <p>Monopoly the super mario bros</p>
-                    </div>
-                </a>
-            </div>
-            <div>
-                <a href="" class="card__container--position">
-                    <div class="card__container--description">
-                        <img class="card__img" src="assets/img/cards/cards-juegos/911SqgtiaCL.jpg" alt="">
-                        <div class="controls__comand">
-                            <span class="controls__delete" >
-                                 <i class="icon-eliminar_negro_24dp-1-1"></i>
-                            </span>
-
-                            <span class="controls__edit" >
-                                <i class="icon-edit_black_24dp-1"></i>
-                            </span>
-                        </div>
-                        <h4>13 USD</h4>
-                        <p>Torre de equilibrio</p>
-                    </div>
-                </a>
-            </div>
-            <div>
-                <a href="" class="card__container--position">
-                    <div class="card__container--description">
-                        <img class="card__img" src="assets/img/cards/cards-juegos/61uaDJP8RVL.jpg" alt="">
-                        <div class="controls__comand">
-                            <span class="controls__delete" >
-                                <i class="icon-eliminar_negro_24dp-1-1"></i>
-                            </span>
-
-                            <span class="controls__edit" >
-                                <i class="icon-edit_black_24dp-1"></i>
-                            </span>
-                        </div>
-                        <h4>22 USD</h4>
-                        <p>Juego de la vida edicion super mario bros</p>
-                    </div>
-                </a>
-            </div>
-            <div>
-                <a href="" class="card__container--position">
-                    <div class="card__container--description">
-                        <img class="card__img" src="assets/img/cards/cards-juegos/91X927mjSHL.jpg" alt="">
-                        <div class="controls__comand">
-                            <span class="controls__delete" >
-                                <i class="icon-eliminar_negro_24dp-1-1"></i>
-                            </span>
-
-                            <span class="controls__edit" >
-                                <i class="icon-edit_black_24dp-1"></i>
-                            </span>
-                        </div>
-                        <h4>13 USD</h4>
-                        <p>Pop Up Super Mario</p>
-                    </div>
-                </a>
-            </div>
-            <div>
-                <a href="" class="card__container--position">
-                    <div class="card__container--description">
-                        <img class="card__img" src="assets/img/cards/cards-juegos/61fw-NBsv6L.jpg" alt="">
-                        <div class="controls__comand">
-                            <span class="controls__delete" >
-                                <i class="icon-eliminar_negro_24dp-1-1"></i>
-                            </span>
-
-                            <span class="controls__edit" >
-                                <i class="icon-edit_black_24dp-1"></i>
-                            </span>
-                        </div>
-                        <h4>21 USD</h4>
-                        <p>USAOPOLY- Juego de damas Super Mario</p>
-                    </div>
-                </a>
-            </div>
-            <div>
-                <a href="" class="card__container--position">
-                    <div class="card__container--description">
-                        <img class="card__img" src="assets/img/cards/cards-juegos/71ZayoGQh8L.jpg" alt="">
-                        <div class="controls__comand">
-                            <span class="controls__delete" >
-                                <i class="icon-eliminar_negro_24dp-1-1"></i>
-                            </span>
-
-                            <span class="controls__edit" >
-                                <i class="icon-edit_black_24dp-1"></i>
-                            </span>
-                        </div>
-                        <h4>25 USD</h4>
-                        <p>Juego de memoria Super Mario Brothers</p>
-                    </div>
-                </a>
-            </div>
-            <div>
-                <a href="" class="card__container--position">
-                    <div class="card__container--description">
-                        <img class="card__img" src="assets/img/cards/cards-juegos/81Ql95DpYJL.jpg" alt="">
-                        <div class="controls__comand">
-                            <span class="controls__delete" >
-                                <i class="icon-eliminar_negro_24dp-1-1"></i>
-                            </span>
-
-                            <span class="controls__edit" >
-                                <i class="icon-edit_black_24dp-1"></i>
-                            </span>
-                        </div>
-                        <h4>10 USD</h4>
-                        <p>UNO Juego de cartas Super Mario</p>
-                    </div>
-                </a>
-            </div>
-            <div>
-                <a href="" class="card__container--position">
-                    <div class="card__container--description">
-                        <img class="card__img" src="assets/img/cards/cards-juegos/81lcVW+3j1L.jpg" alt="">
-                        <div class="controls__comand">
-                            <span class="controls__delete" >
-                                <i class="icon-eliminar_negro_24dp-1-1"></i>
-                            </span>
-
-                            <span class="controls__edit" >
-                                <i class="icon-edit_black_24dp-1"></i>
-                            </span>
-                        </div>
-                        <h4>13 USD</h4>
-                        <p>Planta piraña escape Super Mario</p>
-                    </div>
-                </a>
-            </div>
-            <div>
-                <a href="" class="card__container--position">
-                    <div class="card__container--description">
-                        <img class="card__img" src="assets/img/cards/cards-juegos/71V8uKRau8L.jpg" alt="">
-                        <div class="controls__comand">
-                            <span class="controls__delete" >
-                                <i class="icon-eliminar_negro_24dp-1-1"></i>
-                            </span>
-
-                            <span class="controls__edit" >
-                                <i class="icon-edit_black_24dp-1"></i>
-                            </span>
-                        </div>
-                        <h4>23 USD</h4>
-                        <p>Juego de pares de fotos</p>
-                    </div>
-                </a>
-            </div>
-            <div>
-                <a href="" class="card__container--position">
-                    <div class="card__container--description">
-                        <img class="card__img" src="assets/img/cards/cards-juegos/71RNHGRHGLL.jpg" alt="">
-                        <div class="controls__comand">
-                            <span class="controls__delete" >
-                                <i class="icon-eliminar_negro_24dp-1-1"></i>
-                            </span>
-
-                            <span class="controls__edit" >
-                                <i class="icon-edit_black_24dp-1"></i>
-                            </span>
-                        </div>
-                        <h4>36 USD</h4>
-                        <p>Tic Tae Toe</p>
-                    </div>
-                </a>
-            </div>
-            <div>
-                <a href="" class="card__container--position">
-                    <div class="card__container--description">
-                        <img class="card__img" src="assets/img/cards/cards-juegos/71SYa+CMzPL.jpg" alt="">
-                        <div class="controls__comand">
-                            <span class="controls__delete" >
-                                <i class="icon-eliminar_negro_24dp-1-1"></i>
-                            </span>
-
-                            <span class="controls__edit" >
-                                <i class="icon-edit_black_24dp-1"></i>
-                            </span>
-                        </div>
-                        <h4>29 USD</h4>
-                        <p>Tiro de arco</p>
-                    </div>
-                </a>
-            </div>
-            <div>
-                <a href="" class="card__container--position">
-                    <div class="card__container--description">
-                        <img class="card__img" src="assets/img/cards/cards-juegos/81CJfjQIRGL.jpg" alt="">
-                        <div class="controls__comand">
-                            <span class="controls__delete" >
-                                <i class="icon-eliminar_negro_24dp-1-1"></i>
-                            </span>
-
-                            <span class="controls__edit" >
-                                <i class="icon-edit_black_24dp-1"></i>
-                            </span>
-                        </div>
-                        <h4>40 USD</h4>
-                        <p>Desafio obstaculos</p>
-                    </div>
-                </a>
-            </div>
+        <section class="grid__container" data-gameBoard="">
+            
                 
         </section>
 
