--- a/views/home.hbs
+++ b/views/home.hbs
@@ -42,154 +42,22 @@
         <div>
 
         </div>
-        
-        {{!-- <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-consola/41W5CxtCsgL.webp" alt="">
-            <h4>215 USD</h4>
-            <p>Nintendo Switch with Neon Blue and Red</p>
-            <a href="">Ver producto</a>
-        </div>
     
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-consola/51OnenSqevL.jpg" alt="">
-            <h4>350 USD</h4>
-            <p>Play Statio PS4 black</p>
-            <a href="">Ver producto</a>
-        </div>
-    
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-consola/61VeVFjD0hL.jpg" alt="">
-            <h4>160 USD</h4>
-            <p>Consola de juegos, bateria incorporada</p>
-            <a href="">Ver producto</a>
-        </div>
-    
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-consola/61pETE6v4vL.jpg" alt="">
-            <h4>150 USD</h4>
-            <p>Sony play station 2 console black</p>
-            <a href="">Ver producto</a>
-        </div>
-    
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-consola/61hczff9SjL.jpg" alt="">
-            <h4>187 USD</h4>
-            <p>RG405M Retro Game Player Android 12</p>
-            <a href="">Ver producto</a>
-        </div>
-    
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-consola/71unFU3zqpL.jpg" alt="">
-            <h4>30 USD</h4>
-            <p>Consola de juegos portatil 500 juegos</p>
-            <a href="">Ver producto</a>
-        </div>
-    
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-consola/61gndBOP9zS.jpg" alt="">
-            <h4>167 USD</h4>
-            <p>Nintendo Switch Lite - Blue</p>
-            <a href="">Ver producto</a>
-        </div>
-  
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-consola/61RVryJZMEL.jpg" alt="">
-            <h4>10 USD</h4>
-            <p>Nintendo eShop Gift Card</p>
-            <a href="">Ver producto</a>
-        </div>
-  
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-consola/71YNm35y1OL.jpg" alt="">
-            <h4>30 USD</h4>
-            <p>Controlador inhalambrico para Switch</p>
-            <a href="">Ver producto</a>
-        </div>
-    
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-consola/71ZKhvqOD4L.jpg" alt="">
-            <h4>45 USD</h4>
-            <p>Controlador para interruptor</p>
-            <a href="">Ver producto</a>
-        </div> --}}
       </section>
 
-      <div class="container__name">
-        <span class="container__title">Juegos de mesa</span>
-        <a class="card__link" href="/products-board_game">Ver todo</a>
-      </div>
-      <section class="your-class" data-board_game="">
-        
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-juegos/81l3EHcpx.jpg" alt="">
-            <h4>15 USD</h4>
-            <p>Monopoly the super mario bros</p>
-            <a href="">Ver producto</a>
+       <div class="container__name">
+            <span class="container__title">Juegos de mesa</span>
+
+            <a class="card__link" href="/products-board_game">
+                <button class="card__link" type="submit">Ver todo</button>
+           </a>
+        </div>
+
+      <section data-board_game="">
+        <div>
+
         </div>
     
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-juegos/911SqgtiaCL.jpg" alt="">
-            <h4>13 USD</h4>
-            <p>Torre de equilibrio</p>
-            <a href="">Ver producto</a>
-        </div>
-    
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-juegos/61uaDJP8RVL.jpg" alt="">
-            <h4>22 USD</h4>
-            <p>Juego de la vida edicion super mario</p>
-            <a href="">Ver producto</a>
-        </div>
-    
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-juegos/91X927mjSHL.jpg" alt="">
-            <h4>13 USD</h4>
-            <p>Pop Up Super Mario</p>
-            <a href="">Ver producto</a>
-        </div>
-    
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-juegos/61fw-NBsv6L.jpg" alt="">
-            <h4>21 USD</h4>
-            <p>USAOPOLY- Juego de damas Super Mario</p>
-            <a href="">Ver producto</a>
-        </div>
-    
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-juegos/71ZayoGQh8L.jpg" alt="">
-            <h4>25 USD</h4>
-            <p>Juego de memoria Super Mario Brothers</p>
-            <a href="">Ver producto</a>
-        </div>
-    
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-juegos/81Ql95DpYJL.jpg" alt="">
-            <h4>10 USD</h4>
-            <p>UNO Juego de cartas Super Mario</p>
-            <a href="">Ver producto</a>
-        </div>
-    
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-juegos/81lcVW+3j1L.jpg" alt="">
-            <h4>13 USD</h4>
-            <p>Planta piraña escape Super Mario</p>
-            <a href="">Ver producto</a>
-        </div>
-    
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-juegos/71V8uKRau8L.jpg" alt="">
-            <h4>23 USD</h4>
-            <p>Juego de pares de fotos</p>
-            <a href="">Ver producto</a>
-        </div>
-  
-        <div class="card__container">
-            <img class="card__img" src="assets/img/cards/cards-juegos/71RNHGRHGLL.jpg" alt="">
-            <h4>36 USD</h4>
-            <p>Tic Tae Toe</p>
-            <a href="">Ver producto</a>
-        </div>
-       
       </section>
     </main>
 
