--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -54,3 +54,4 @@
 
 <script type="module" src="./js/singup.js"></script>
 <script type="module" src="./js/login.js"></script>
+<script type="module" src="./js/imputSearch.js"></script>
