--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,17 +1,19 @@
 <nav class="navbar">
     <div class="navbar__container">
         <img class="navbar__img" src="./assets/img/Logo.svg" alt="">
-        <div class="navbar__input">
-            <input class="navbar__input--container" type="text" placeholder="¿Qué deseas buscar?">
-            <i class="icon-Icone"></i>
-        </div>
 
+        <form id="search" class="navbar__imput">    
+            <input class="navbar__input--container" id="searchInput" type="search" placeholder="¿Qué deseas buscar?">
+            <button type="submit" requerid class="icon-Icone"></button>
+        </form>
+            
+        
         {{#if false}}
             <a href="/login" class="navbar__button">
                 Login
             </a>
         {{else}}
-            <a href="/products-mario_bros" class="navbar__button">
+            <a href="/" class="navbar__button">
                 Administrador
             </a>
         {{/if}}
