--- a/views/update-products.hbs
+++ b/views/update-products.hbs
@@ -26,31 +26,37 @@
 
         <form action="" class="form" data-update="">
 
-            <div class="input-container">
-                <input name="imgURL" id="imgURL" class="input" type="text" placeholder="URL de la imagen" required data-imgURL="">
-                <label class="input-label" for="url">URL de la imagen</label>
-                <span class="input-message-error">Este campo no es valido</span>
-            </div>
-            <div class="input-container">
-                <input name="categoria" id="categoria" class="input" type="text" placeholder="Categoria" required data-categoria="">
-                <label class="input-label" for="categoria">Categoria</label>
-                <span class="input-message-error">Este campo no es valido</span>
-            </div>
-            <div class="input-container">
-                <input name="name" id="name" class="input" type="text" placeholder="Nombre del producto" required data-name="">
-                <label class="input-label" for="name">Nombre del producto</label>
-                <span class="input-message-error">Este campo no es valido</span>
-            </div>
-            <div class="input-container">
-                <input name="precio" id="precio" class="input" type="text" placeholder="Precio de producto" required data-price="">
-                <label class="input-label" for="precio">Precio de producto</label>
-                <span class="input-message-error">Este campo no es valido</span>
-            </div>
-            <div class="input-container">
-                <input name="descripcion" id="descripcion" class="input" type="text" placeholder="Descripción" required data-descripcion="">
-                <label class="input-label" for="descripcion">Descripción</label>
-                <span class="input-message-error">Este campo no es valido</span>
-            </div>
+             <div class="input-container">
+                    <input name="imgURL" id="imgURL" class="input" type="text" placeholder="URL de la imagen" required data-imgURL="">
+                    <label class="input-label" for="url">URL de la imagen</label>
+                    <span class="input-message-error">Este campo no es valido</span>
+                </div>
+
+                <div class="input-container">
+                    <select class="input" name="categoria" id="categoria" placeholder ="Categoria" required data-categoria="">
+                        <option value="products-mario_bros">Mario Bros</option>
+                        <option value="products-video_game">Consolas</option>
+                        <option value="products-board_game">Juegos de mesa</option>
+                    </select>
+                </div>
+
+                <div class="input-container">
+                    <input name="name" id="name" class="input" type="text" placeholder="Nombre del producto" required data-name="">
+                    <label class="input-label" for="name">Nombre del producto</label>
+                    <span class="input-message-error">Este campo no es valido</span>
+                </div>
+
+                <div class="input-container">
+                    <input name="precio" id="precio" class="input" type="number" placeholder="Precio de producto" required data-price="">
+                    <label class="input-label" for="precio">Precio de producto</label>
+                    <span class="input-message-error">Este campo no es valido</span>
+                </div>
+
+                <div class="input-container">
+                    <input name="descripcion" id="descripcion" class="input" type="text" placeholder="Descripción" required data-descripcion="">
+                    <label class="input-label" for="descripcion">Descripción</label>
+                    <span class="input-message-error">Este campo no es valido</span>
+                </div>
 
             <button type="submit" class="form__button">Actualizar producto</button>
     </form>
