--- a/public/css/header.css
+++ b/public/css/header.css
@@ -37,7 +37,7 @@
     font-weight: 400;
     justify-content: center;
     overflow: hidden;
-    padding: 12px 16px;
+    padding: 10px;
     position: relative;
     transition: 0.3s;
     transition-delay: 0.3s;
@@ -52,7 +52,7 @@
     content: "";
     height: 200%;
     position: absolute;
-    top: -100px;
+    top: -200px;
     transition: 0.3s;
     width: 150%;
     z-index: -1;
