--- a/public/css/products.css
+++ b/public/css/products.css
@@ -57,7 +57,7 @@
 
 .grid__container{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 16px;
     max-width: 1136px;
     padding-top: 16px;
@@ -89,6 +89,12 @@
     font-size: 16px;
     font-weight: 400;
     text-decoration: none;
+}
+
+@media screen and (min-width:500px) {
+    .grid__container{
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
 @media screen and (min-width:768px) {
